 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 3
============

* [cdunde/DanielPharos]: Added vertex color support.

* [DanielPharos]: Fix some problems with the FAKK2 and EF2 compilers producing bad BSP filenames.

* [cdunde/DanielPharos]: Added asi model format importing plugin.

* [DanielPharos]: Updated to DevIL 1.7.8, added IWI loading, and added many new image
          - loading/saving options.

* [DanielPharos]: You can now "uninstall" gamemodes: just delete the addons-directory of that game.

* [DanielPharos]: Read in two additional MOHAA surface flags. MOHAA .map file loading is still not
          - working properly though.

* [DanielPharos]: Grayed out beziers can now not be selected in views anymore.

* [DanielPharos]: Removed Quake 3's Call of Duty addon. People should switch to CoD gamemode.

* [DanielPharos]: Add colorboxes in treeview for Model Editor bones to display start_color and end_color.

6.6.0 Beta 2
============

* [cdunde/DanielPharos]: Full support for .md5mesh multiple meshes, component (mesh) skins
          - and their shader display including editing abilities for both shaders and skins.

* [cdunde]: Revamp of bones Linear handle creation to increase drawing speed and easer color recognition.

* [cdunde/DanielPharos]: Full support for .md5mesh bone importing with weight assignment and various
          - methods of bone rotation for QuArK Default, single set and multi sets of bones.
          - Various menu functions for bone handle scaling and reset for selected bones and all bones.

* [DanielPharos]: Model Editor - Now bones can be moved around in the treeview even though other items
          - are also selected.
