@@ -15,6 +15,8 @@ $Id$
 6.6.0 Beta 3
 ============
 
+* [DanielPharos]: Fixed the treeview color boxes for components not showing up the first time.
+
 * [cdunde/DanielPharos]: Added vertex color support.
 
 * [DanielPharos]: Fix some problems with the FAKK2 and EF2 compilers producing bad BSP filenames.
